# Finnacle

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  manage.py  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
authentication/: admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
core/: urls.py  views.py
core/templates/core/: dashboard.html  login.html  welcome.html
finacle_app/: asgi.py  settings.py  urls.py  wsgi.py
tests/: locustfile.py  test_health_endpoints.py  test_settings.py
